--- a/backend/src/main/resources/templates/login.html
+++ b/backend/src/main/resources/templates/login.html
@@ -1,58 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
-  <link rel="stylesheet" href="/css/styles.css" />
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Courgette&display=swap" rel="stylesheet">
+        integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+    <link rel="stylesheet" href="/css/styles.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Courgette&display=swap" rel="stylesheet">
     <title>Document</title>
 </head>
+
 <body>
-    <section class="vista-login">
-        <div class="card">
-            <div class="row g-0">
-                <div class="col-md-6 img-container">
-                    <img id="foto-login" src="/img/login_imgC.jpg" class="img-fluid rounded-start" alt="..." />
-                    <div class="text-container">
-                        <h2 id="roomly-login"></h2>
-                        <h4></h4>
-                    </div>
-                </div>
+    <section class="vista-login d-flex justify-content-center align-items-center" style="min-height: 100vh;">
+        <div class="form-container">
+            <div class="form-header text-center">
+                <img src="/img/logo.png" alt="logo" style="width: 70px ;" />
+                <h4>Bienvenido de vuelta</h4>
+            </div>
+            <form>
+                <div class="mb-3">
+                    <label for="correo" class="form-label">Correo</label>
+                    <input type="email" class="form-control" id="correo" aria-describedby="emailHelp" required />
 
-                <div class="col-md-6 login-container">
-                    <div class="card-body">
-                        <div class="form-header text-center">
-                            <img src={logo} alt="logo" style="width: 80px ;"  />
-                            <h4>Bienvenido de vuelta</h4>
-                        </div>
-                        <form>
-                            <div class="mb-3">
-                                <label for="correo" class="form-label">Correo</label>
-                                <input type="email" class="form-control" id="correo" aria-describedby="emailHelp" required />
-
-                            </div>
-                            <div class="mb-3">
-                                <label for="clave" class="form-label">Contraseña</label>
-                                <input type="password" class="form-control" id="clave" required />
-                            </div>
-                            <button type="submit" class="btn btn-login d-block" style="width: 100%">Login</button>
-                        </form>
-                        <div class="links-footer text-center">
-                            <a href="#">¿Olvidaste tu contraseña?</a>
-                            <hr />
-                            <p>No tienes cuenta aún?<a href="/registro"> Regístrate!</a></p>
-                        </div>
-                    </div>
                 </div>
+                <div class="mb-3">
+                    <label for="clave" class="form-label">Contraseña</label>
+                    <input type="password" class="form-control" id="clave" required />
+                </div>
+                <button type="submit" class="btn btn-login d-block" style="width: 100%">Login</button>
+            </form>
+            <div class="links-footer text-center">
+                <a href="#">¿Olvidaste tu contraseña?</a>
+                <hr />
+                <p>No tienes cuenta aún?<a href="/registrar"> Regístrate!</a></p>
             </div>
         </div>
     </section>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous">
-    </script>
+        integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous">
+        </script>
 </body>
+
 </html>
