--- a/backend/src/main/resources/templates/index.html
+++ b/backend/src/main/resources/templates/index.html
@@ -49,7 +49,7 @@
           </li>
 
           <li class="nav-item">
-            <a class="nav-link text-center-vert nav-btns" href="/registrar">Regístrate!</a>            
+            <a class="nav-link text-center-vert nav-btns" href="/registrar">Regístrate!</a>
           </li>
 
         </ul>
@@ -85,6 +85,58 @@
         </div>
       </div>
     </div>
+
+    <div id="explorar" class="explore-container px-4 py-3">
+      <div class="card mb-3">
+        <div class="row g-0">
+          <div class="col-md-7 d-flex justify-content-center align-items-center">
+            <div class="card-body text-center">
+              <h2 class="card-title">¡Sumérgete en el fascinante universo de la moda! </h2>
+              <p>Explora las creaciones más innovadoras y encuentra inspiración para tu propio estilo.</p>
+            </div>
+          </div>
+          <div class="col-md-5">
+            <div id="carouselExampleCaptions" class="carousel slide">
+              <div class="carousel-indicators">
+                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
+                  aria-current="true" aria-label="Slide 1"></button>
+                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"
+                  aria-label="Slide 2"></button>
+                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"
+                  aria-label="Slide 3"></button>
+              </div>
+              <div class="carousel-inner">
+                <div class="carousel-item active">
+                  <img src="/img/imgBanner.png" class="d-block w-100" alt="...">
+
+                </div>
+                <div class="carousel-item">
+                  <img src="/img/moda.jpg" class="d-block w-100" alt="...">
+
+                </div>
+                <div class="carousel-item">
+                  <img src="/img/logo.png" class="d-block w-100" alt="...">
+
+                </div>
+              </div>
+              <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"
+                data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+              </button>
+              <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions"
+                data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+              </button>
+            </div>
+          </div>
+          
+        </div>
+      </div>
+
+    </div>
+
     <div id="about" class="aboutUs-container px-4 py-3">
       <h2 class="pb-2 border-bottom">Sobre nosotros</h2>
       <div class="row row-cols-1 row-cols-md-2 align-items-md-center g-5 py-3">
@@ -168,6 +220,7 @@
         </div>
       </div>
     </div>
+
     <div id="faq" class='faq-container px-4 py-3'>
       <h2>Preguntas frecuentes</h2>
       <div class="row row-cols-1 row-cols-md-2 g-4 py-3 px-4">
