--- a/backend/src/main/resources/templates/signup.html
+++ b/backend/src/main/resources/templates/signup.html
@@ -21,43 +21,43 @@
                     <img src="/img/logo.png" alt="logo" style="width: 50px ;" />
                     <h4>Bienvenido a FashionNet</h4>
                 </div>
-                <form class="row">
+                <form class="row" action="/registro" method="POST">
                     <div class="col-md-6  mb-2">
                         <label for="inputNombre" class="form-label">Nombre</label>
-                        <input type="text" class="form-control form-control-sm" id="inputNombre">
+                        <input type="text" name="nombreCompleto" class="form-control form-control-sm" id="inputNombre">
                     </div>
                     <div class="col-md-6  mb-2">
                         <label for="inputUsername" class="form-label">Username</label>
-                        <input type="text" class="form-control form-control-sm" id="inputUsername">
+                        <input type="text" name="nombreUsuario" class="form-control form-control-sm" id="inputUsername">
                     </div>
                     <div class="col-md-12 mb-2">
                         <label for="inputEmail" class="form-label">Email</label>
-                        <input type="email" class="form-control form-control-sm" id="inputEmail">
+                        <input type="email" name="email" class="form-control form-control-sm" id="inputEmail">
                     </div>
                     <div class="col-md-6 mb-2">
                         <label for="inputPassword1" class="form-label">Contraseña</label>
-                        <input type="password" class="form-control form-control-sm" id="inputPassword1">
+                        <input type="password" name="password" class="form-control form-control-sm" id="inputPassword1">
                     </div>
                     <div class="col-md-6 mb-2">
                         <label for="inputPassword2" class="form-label">Confirmar contraseña</label>
-                        <input type="password" class="form-control form-control-sm" id="inputPassword2">
+                        <input type="password" name="password2" class="form-control form-control-sm" id="inputPassword2">
                     </div>
                     <div class="col-md-12 mb-2">
                         <label for="formFile" class="form-label">Adjunta foto de perfil</label>
-                        <input class="form-control form-control-sm" type="file" id="formFile">
+                        <input class="form-control form-control-sm" name="archivo" type="file" id="formFile">
                     </div>
                     <div class="col-md-12">
                         <span>Seleccione cómo desea registrarse:</span>
                         <div class="d-flex flex-row mt-1">
                             <div class="form-check col-md-6">
-                                <input class="form-check-input" type="radio" name="flexRadioDefault"
+                                <input class="form-check-input" type="radio" name="rol" value="USER"
                                     id="flexRadioDefault1">
                                 <label class="form-check-label" for="flexRadioDefault1">
                                     Usuario
                                 </label>
                             </div>
                             <div class="form-check col-md-6">
-                                <input class="form-check-input" type="radio" name="flexRadioDefault"
+                                <input class="form-check-input" type="radio" name="rol" value="DISENIADOR"
                                     id="flexRadioDefault2" checked>
                                 <label class="form-check-label" for="flexRadioDefault2">
                                     Diseñador
