--- a/backend/src/main/resources/templates/login.html
+++ b/backend/src/main/resources/templates/login.html
@@ -17,7 +17,7 @@
     <section class="vista-login d-flex justify-content-center align-items-center" style="min-height: 100vh;">
         <div class="form-container">
             <div class="form-header text-center">
-                <img src="/img/logo.png" alt="logo" style="width: 70px ;" />
+                <a href="/"><img src="/img/logo.png" alt="logo" style="width: 50px ;" /></a>
                 <h4>Bienvenido de vuelta</h4>
             </div>
             <form action="/logincheck" method="POST">
