--- a/backend/src/main/resources/templates/signup.html
+++ b/backend/src/main/resources/templates/signup.html
@@ -18,47 +18,50 @@
         <div class="container">
             <div class="form-container col-md-8 offset-md-2 col-lg-6 offset-lg-3">
                 <div class="form-header text-center">
-                    <img src="/img/logo.png" alt="logo" style="width: 50px ;" />
+                    <a href="/"><img src="/img/logo.png" alt="logo" style="width: 50px ;" /></a>                    
                     <h4>Bienvenido a FashionNet</h4>
                 </div>
                 <form class="row" action="/registro" method="POST">
                     <div class="col-md-6  mb-2">
-                        <label for="inputNombre" class="form-label">Nombre</label>
-                        <input type="text" name="nombreCompleto" class="form-control form-control-sm" id="inputNombre">
+                        <label for="inputNombre" class="form-label">Nombre (*)</label>
+                        <input type="text" name="nombreCompleto" class="form-control form-control-sm" id="inputNombre" required>
                     </div>
                     <div class="col-md-6  mb-2">
-                        <label for="inputUsername" class="form-label">Username</label>
-                        <input type="text" name="nombreUsuario" class="form-control form-control-sm" id="inputUsername">
+                        <label for="inputUsername" class="form-label">Username (*)</label>
+                        <input type="text" name="nombreUsuario" class="form-control form-control-sm" id="inputUsername" required>
                     </div>
                     <div class="col-md-12 mb-2">
-                        <label for="inputEmail" class="form-label">Email</label>
-                        <input type="email" name="email" class="form-control form-control-sm" id="inputEmail">
+                        <label for="inputEmail" class="form-label">Email (*)</label>
+                        <input type="email" name="email" class="form-control form-control-sm" id="inputEmail" required>
                     </div>
                     <div class="col-md-6 mb-2">
-                        <label for="inputPassword1" class="form-label">Contraseña</label>
-                        <input type="password" name="password" class="form-control form-control-sm" id="inputPassword1">
+                        <label for="inputPassword1" class="form-label">Contraseña (*)</label>
+                        <input type="password" name="password" class="form-control form-control-sm" id="inputPassword1" required>
+                        <div id="passwordHelpBlock" class="form-text">
+                            La contraseña debe tener más de 8 caracteres
+                          </div>
                     </div>
                     <div class="col-md-6 mb-2">
-                        <label for="inputPassword2" class="form-label">Confirmar contraseña</label>
-                        <input type="password" name="password2" class="form-control form-control-sm" id="inputPassword2">
+                        <label for="inputPassword2" class="form-label">Confirmar contraseña (*)</label>
+                        <input type="password" name="password2" class="form-control form-control-sm" id="inputPassword2"required>
                     </div>
                     <div class="col-md-12 mb-2">
                         <label for="formFile" class="form-label">Adjunta foto de perfil</label>
                         <input class="form-control form-control-sm" name="archivo" type="file" id="formFile">
                     </div>
                     <div class="col-md-12">
-                        <span>Seleccione cómo desea registrarse:</span>
+                        <span>Seleccione cómo desea registrarse (*):</span>
                         <div class="d-flex flex-row mt-1">
                             <div class="form-check col-md-6">
                                 <input class="form-check-input" type="radio" name="rol" value="USER"
-                                    id="flexRadioDefault1">
+                                    id="flexRadioDefault1" required>
                                 <label class="form-check-label" for="flexRadioDefault1">
                                     Usuario
                                 </label>
                             </div>
                             <div class="form-check col-md-6">
                                 <input class="form-check-input" type="radio" name="rol" value="DISENIADOR"
-                                    id="flexRadioDefault2" checked>
+                                    id="flexRadioDefault2" required>
                                 <label class="form-check-label" for="flexRadioDefault2">
                                     Diseñador
                                 </label>
