--- a/backend/src/main/resources/templates/signup.html
+++ b/backend/src/main/resources/templates/signup.html
@@ -21,7 +21,7 @@
                     <a href="/"><img src="/img/logo.png" alt="logo" style="width: 50px ;" /></a>                    
                     <h4>Bienvenido a FashionNet</h4>
                 </div>
-                <form class="row" action="/registro" method="POST">
+                <form class="row" action="/registro" method="POST" enctype="multipart/form-data">
                     <div class="col-md-6  mb-2">
                         <label for="inputNombre" class="form-label">Nombre (*)</label>
                         <input type="text" name="nombreCompleto" class="form-control form-control-sm" id="inputNombre" required>
