--- a/backend/src/main/resources/templates/home.html
+++ b/backend/src/main/resources/templates/home.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
-<html lang="en">
+<html xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 
 <head>
+    
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -35,7 +36,7 @@
                     <li class="nav-item me-3">
                         <a class="nav-link" href="">Explorar</a>
                     </li>
-                    <li class="nav-item me-3">
+                    <li class="nav-item me-3" th:if="${session.usuariosession != null}" sec:authorize="hasAnyRole('ADMIN', 'DISENIADOR')">
                         <a class="nav-link" href="/disenador/crear">Crear</a>
                     </li>
                 </ul>
@@ -51,7 +52,7 @@
                         <li>
                             <hr class="dropdown-divider" />
                         </li>
-                        <li><a class="dropdown-item" href="#">Cerrar sesión</a></li>
+                        <li><a class="dropdown-item" href="/logout">Cerrar sesión</a></li>
                     </ul>
                 </div>
             </div>
