--- a/backend/src/main/resources/static/css/styles.css
+++ b/backend/src/main/resources/static/css/styles.css
@@ -152,7 +152,13 @@ nav a {
 .explore-container h2{
     font-size: 55px;
 }
-#passwordHelpBlock{
+#passwordHelpBlock, 
+#passwordMatchMessage{
     font-size: 10px;
     margin: 0px;
+}
+.vista-registro .green-border {
+    border: 1px solid rgb(76, 211, 76) !important;
+    background-color:  rgb(206, 238, 206) !important;
+    box-shadow: none!important;
 }
