--- a/backend/src/main/resources/templates/index.html
+++ b/backend/src/main/resources/templates/index.html
@@ -70,6 +70,12 @@
   </nav>
 
   <main>
+    <div th:if="${exito != null}" class="card text-white bg-success mensajeExito" >
+      <div class="card-body">
+          <h5 class="card-title">Exito!</h5>
+          <p class="card-text" th:text="${exito}"></p>
+      </div>
+  </div>
     <div class="card banner-container">
       <div class="row g-0 info-container py-5">
         <div class="col-md-5 d-flex justify-content-center align-items-center">
