--- a/backend/src/main/resources/templates/signup.html
+++ b/backend/src/main/resources/templates/signup.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 
 <head>
     <meta charset="UTF-8">
@@ -18,17 +18,27 @@
         <div class="container">
             <div class="form-container col-md-8 offset-md-2 col-lg-6 offset-lg-3">
                 <div class="form-header text-center">
-                    <a href="/"><img src="/img/logo.png" alt="logo" style="width: 50px ;" /></a>                    
+                    <a href="/"><img src="/img/logo.png" alt="logo" style="width: 50px ;" /></a>
                     <h4>Bienvenido a FashionNet</h4>
                 </div>
                 <form class="row" action="/registro" method="POST" enctype="multipart/form-data">
+
+                    <div th:if="${error != null}" class="card text-white bg-danger mb-3 mensajeError">
+                        <div class="card-body">
+                            <h6 class="card-title">Error 👎</h6>
+                            <p class="card-text" th:text="${error}"></p>
+                        </div>
+                    </div>
+
                     <div class="col-md-6  mb-2">
                         <label for="inputNombre" class="form-label">Nombre (*)</label>
-                        <input type="text" name="nombreCompleto" class="form-control form-control-sm" id="inputNombre" required>
+                        <input type="text" name="nombreCompleto" class="form-control form-control-sm" id="inputNombre"
+                            required>
                     </div>
                     <div class="col-md-6  mb-2">
                         <label for="inputUsername" class="form-label">Username (*)</label>
-                        <input type="text" name="nombreUsuario" class="form-control form-control-sm" id="inputUsername" required>
+                        <input type="text" name="nombreUsuario" class="form-control form-control-sm" id="inputUsername"
+                            required>
                     </div>
                     <div class="col-md-12 mb-2">
                         <label for="inputEmail" class="form-label">Email (*)</label>
@@ -36,14 +46,19 @@
                     </div>
                     <div class="col-md-6 mb-2">
                         <label for="inputPassword1" class="form-label">Contraseña (*)</label>
-                        <input type="password" name="password" class="form-control form-control-sm" id="inputPassword1" required>
+                        <input type="password" name="password" class="form-control form-control-sm" id="inputPassword1"
+                            required>
                         <div id="passwordHelpBlock" class="form-text">
                             La contraseña debe tener mínimo 5 caracteres
-                          </div>
+                        </div>
                     </div>
                     <div class="col-md-6 mb-2">
                         <label for="inputPassword2" class="form-label">Confirmar contraseña (*)</label>
-                        <input type="password" name="password2" class="form-control form-control-sm" id="inputPassword2" required>
+                        <input type="password" name="password2" class="form-control form-control-sm" id="inputPassword2"
+                            required>
+                        <div id="passwordMatchMessage" class="form-text" style="display: none;">
+                            Las contraseñas coinciden
+                        </div>
                     </div>
                     <div class="col-md-12 mb-2">
                         <label for="formFile" class="form-label">Adjunta foto de perfil</label>
@@ -82,6 +97,19 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous">
         </script>
+    <script>
+        const passwordInput = document.getElementById('inputPassword1');
+        const password2Input = document.getElementById('inputPassword2');
+        password2Input.addEventListener('input', () => {
+            if (password2Input.value === passwordInput.value) {
+                passwordMatchMessage.style.display = 'block';
+                password2Input.classList.add('green-border');
+            } else {
+                passwordMatchMessage.style.display = 'none';
+                password2Input.classList.remove('green-border');
+            }
+        });
+    </script>
 </body>
 
 </html>
