cambios en panel controlador de metodos repetidos

--- a/backend/src/main/resources/static/css/styles.css
+++ b/backend/src/main/resources/static/css/styles.css
@@ -166,3 +166,8 @@ nav a {
 .crear-container{
     background-image: url('../img/fondo1.png');    
 }
+/* -----------------FORM LOGIN------------------- */
+.vista-administrador {
+    font-family: 'Nunito', sans-serif;
+    background-image: url('../img/fondo1.png');
+}
