--- a/backend/src/main/resources/templates/form_crearPost.html
+++ b/backend/src/main/resources/templates/form_crearPost.html
@@ -27,7 +27,7 @@
             <div class="collapse navbar-collapse" id="navbarsExample09">
                 <ul class="navbar-nav mx-auto mb-2 mb-lg-0">
                     <li class="nav-item me-3">
-                        <a class="nav-link" href="">Inicio</a>
+                        <a class="nav-link" href="/inicio">Inicio</a>
                     </li>
                     <li class="nav-item me-3">
                         <a class="nav-link" href="">Explorar</a>
@@ -40,15 +40,16 @@
                 <div class="dropdown text-end">
                     <a href="#" class="d-block link-body-emphasis text-decoration-none dropdown-toggle"
                         data-bs-toggle="dropdown" aria-expanded="false">
-                        <img src="https://github.com/mdo.png" alt="mdo" width="32" height="32" class="rounded-circle" />
+                        <img th:src="@{/imagen/perfil/__${session.usuariosession.id}__}" alt="foto-perfil" width="35"
+                            height="35" class="rounded-circle" id="img-cover" />
                     </a>
                     <ul class="dropdown-menu dropdown-menu-end text-small">
-                        <li><a class="dropdown-item" href="#">Mi perfil</a></li>
-                        <li><a class="dropdown-item" href="#">Editar perfil</a></li>
+                        <li><a class="dropdown-item" href="/perfil">Mi perfil</a></li>
+                        <li><a class="dropdown-item" href="/editar_perfil">Editar perfil</a></li>
                         <li>
                             <hr class="dropdown-divider" />
                         </li>
-                        <li><a class="dropdown-item" href="#">Cerrar sesión</a></li>
+                        <li><a class="dropdown-item" href="/logout">Cerrar sesión</a></li>
                     </ul>
                 </div>
             </div>
@@ -56,7 +57,7 @@
     </nav>
 
     <section class="crear-container d-flex justify-content-center align-items-center vh-100">
-
+        <div class="blurry-background"></div>
         <form action="/disenador/publicacion" method="POST" enctype="multipart/form-data">
             <div class="mb-3">
                 <label for="categoria" class="form-label">Categoria(*)</label>
