--- a/backend/src/main/resources/templates/dashboard.html
+++ b/backend/src/main/resources/templates/dashboard.html
@@ -38,6 +38,7 @@
           </li>
           <li class="nav-item me-3">
             <a class="nav-link" href="#usuarios">Usuarios</a>
+                  
           </li>
           <li class="nav-item me-3">
             <a class="nav-link" href="#publicaciones">Publicaciones</a>
@@ -72,7 +73,55 @@
     </div>
 
     <div id="usuarios" class="vista-usuarios d-flex justify-content-center align-items-center" style="min-height: 100vh;">
-      
+      <table class="table table-dark flexible-table">
+                    <thead class="encabezado" style="color:#ffc500">
+                        <tr>
+<!--                            <th scope="col">Id del Usuario</th>-->
+                            <th scope="col">Nombre</th>
+                            <th scope="col">Usuario</th>
+                            <th scope="col">Foto de Perfil</th>
+                            <th scope="col">Rol</th>
+                            <th scope="col">Fecha de alta</th> 
+                            <th scope="col">Estado de Baja</th>                            
+                            <th scope="col">Cambiar Estado</th>
+                            <th scope="col">Modificar</th>
+                            <th scope="col">Cantidad de Reportes</th>
+                            <th scope="col">Eliminar</th>
+
+                        </tr>
+                    </thead>
+                    <tbody  th:each="usuario : ${usuarios}"> 
+                        <tr >
+                            <th scope="row" th:text="${usuario.nombreCompleto}"></th>
+
+                            <td th:text="${usuario.nombreUsuario}"></td>
+                            <td>
+
+                                <a><img class="avatar" th:if="${usuario.imagen != null}" th:src="@{/imagen/perfil/__${usuario.id}__}" style="width: 50px ;
+                                        height: 50px;
+                                        border-radius: 30%;
+                                        overflow: hidden;" alt="avatar"></a>
+
+                            <td th:text="${usuario.rol}"></td>
+                            <td th:text="${usuario.fechaAlta}"></td>
+                            <td th:text="${usuario.darBaja}"></td>
+                            <td >
+                                <a th:href= "@{/administrador/darBajaUsuario/__${usuario.id}__}">Cambiar</a>
+                            </td>
+                            
+                            <td>
+                                <a th:href= "@{/perfil/__${usuario.id}__}"> Modificar</a>
+                            </td>
+                            <td >
+                                 <a th:href= "@{/administrador/usuario_reporte_contador/__${usuario.id}__}"></a>
+                            </td>
+                            <td  >
+                                <a th:if="${usuario.rol != T(com.egg.backend.enumeraciones.Rol).ADMIN}"  th:href= "@{/administrador/usuario_eliminar/__${usuario.id}__}" onclick="return confirm('¿Está seguro de que desea eliminar la noticia?');">Eliminar </a>
+                            </td>
+                        </tr>
+
+                    </tbody>
+                </table>
 
     </div>
 
@@ -134,6 +183,18 @@
                                 <use href="#facebook" />
                             </svg></a></li>
                 </ul>
+                 <div th:if="${exito}!= null" class="card text-white bg-success mb-3 mt-3 mensajeExito" >
+                    <div class="card-body">
+                        <h5 class="card-title">Exito!!! </h5>
+                        <p class="card-text" th:text="${exito}"></p>
+                    </div>
+                </div>
+                <div th:if="${error}!= null" class="card text-white bg-danger mb-3 mensajeError" >
+                    <div class="card-body">
+                        <h5 class="card-title">Error!!!</h5>
+                        <p class="card-text" th:text="${error}"></p>
+                    </div>
+                </div>
             </footer>
         </div>
     </div>
