--- a/backend/src/main/resources/templates/dashboard.html
+++ b/backend/src/main/resources/templates/dashboard.html
@@ -116,7 +116,7 @@
                                  <a th:href= "@{/administrador/usuario_reporte_contador/__${usuario.id}__}"></a>
                             </td>
                             <td  >
-                                <a th:if="${usuario.rol != T(com.egg.backend.enumeraciones.Rol).ADMIN}"  th:href= "@{/administrador/usuario_eliminar/__${usuario.id}__}" onclick="return confirm('¿Está seguro de que desea eliminar la noticia?');">Eliminar </a>
+                                <a th:if="${usuario.rol != T(com.egg.backend.enumeraciones.Rol).ADMIN}"  th:href= "@{/administrador/usuario_eliminar/__${usuario.id}__}" onclick="return confirm('¿Está seguro de que desea eliminar a este usuario?');">Eliminar </a>
                             </td>
                         </tr>
 
@@ -126,7 +126,51 @@
     </div>
 
     <div id="publicaciones" class="vista-publicaciones d-flex justify-content-center align-items-center" style="min-height: 100vh;">
-      
+       <table class="table table-dark flexible-table">
+                    <thead class="encabezado" style="color:#ffc500">
+                        <tr>
+<!--                            <th scope="col">Id del Usuario</th>-->
+                            <th scope="col">Usuario</th>
+                            <th scope="col">Imagen</th>
+                            <th scope="col">Categoria</th>
+                            <th scope="col">Contenido</th>
+                            <th scope="col">Fecha de Publicacion</th> 
+                            <th scope="col">Estado de Baja</th>                            
+                            <th scope="col">Cambiar Estado</th>
+                            <th scope="col">Cantidad de Reportes</th>
+                            <th scope="col">Eliminar</th>
+
+                        </tr>
+                    </thead>
+                    <tbody  th:each="publicacion : ${publicaciones}"> 
+                        <tr >
+                            <th scope="row" th:each="usuario : ${publicacion.usuario}" th:text="${usuario.nombreUsuario}"></th>
+                            
+                            <td>
+
+                                <a><img class="avatar" th:if="${publicacion.imagen != null}" th:src="@{/imagen/publicacion/__${publicacion.id}__}" style="width: 50px ;
+                                        height: 50px;
+                                        border-radius: 30%;
+                                        overflow: hidden;" alt="pic"></a>
+
+                            <td th:each="categoria : ${publicacion.categoria}" th:text="${categoria.nombre}"></td>
+                            <td th:text="${publicacion.contenido}"></td>
+                            <td th:text="${publicacion.fechaPublicacion}"></td>
+                            <td th:text="${publicacion.darBaja}"></td>
+                            <td >
+                                <a th:href= "@{/administrador/darBajaPublicacion/__${publicacion.id}__}">Cambiar</a>
+                            </td>
+                            
+                            <td >
+                                 <a th:href= "@{/administrador/publicacion_reporte_contador/__${publicacion.id}__}"></a>
+                            </td>
+                            <td  >
+                                <a th:href= "@{/administrador/publicacion_eliminar/__${publicacion.id}__}" onclick="return confirm('¿Está seguro de que desea eliminar la publicacion?');">Eliminar </a>
+                            </td>
+                        </tr>
+
+                    </tbody>
+                </table>
     </div>
 
     <div id="comentarios" class="vista-comentarios d-flex justify-content-center align-items-center" style="min-height: 100vh;">
