--- a/backend/src/main/resources/templates/usuario_modificar.html
+++ b/backend/src/main/resources/templates/usuario_modificar.html
@@ -62,18 +62,10 @@
                     </div>
                     <div class="col-md-12 mb-2">
                         <label for="formFile" class="form-label">Adjunta foto de perfil</label>
-                        <input class="form-control form-control-sm" name="archivo" type="file" id="formFile">
+                        <input class="form-control form-control-sm" name="archivo" type="file" id="formFile"  th:value="@{/imagen/perfil/__${usuario.id}__}" >
                     </div>
                     <div class="col-md-12">
-                        
                         <span>Seleccione cómo desea registrarse (*):</span>
-                        <div class="form-check col-md-6">
-                                <input class="form-check-input" type="radio" name="rol" th:value="${rol}"
-                                    id="flexRadioDefault2" required>
-                                <label class="form-check-label" for="flexRadioDefault2">
-                                    No cambiar rol
-                                </label>
-                            </div>
                         <div class="d-flex flex-row mt-1">
                             <div class="form-check col-md-6">
                                 <input class="form-check-input" type="radio" name="rol" value="USER"
@@ -89,8 +81,14 @@
                                     Diseñador
                                 </label>
                             </div>
-                            
                         </div>
+                        <div class="form-check col-md-6">
+                                <input class="form-check-input" type="radio" name="rol" th:value="${rol}"
+                                    id="flexRadioDefault2" required>
+                                <label class="form-check-label" for="flexRadioDefault2">
+                                    No cambiar rol
+                                </label>
+                            </div>
                     </div>
                     <button type="submit" class="btn btn-registrar d-block" style="width: 100%;">Enviar</button>
                 </form>
